Proyecto empezado con alta y baja funcionando, trabajando en las modis

--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "mysql2": "^2.3.3",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-aria": "^3.18.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
