--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-aria/ssr": "^3.3.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "mysql2": "^2.3.3",
